# Py1812

./: .gitignore  CITATION.cff  README.md  pyproject.toml
src/Py1812/: P1812.npz  P1812.py  __init__.py  initiate_digital_maps.py
tests/: validateP1812.py
tests/validation_profiles/: b2iseac.csv  b2iseac_dense_urban_land.csv  b2iseac_dense_urban_land_eqdist.csv  b2iseac_eqdist.csv  b2iseac_eqdist_vertical.csv  b2iseac_rural_land_100km.csv  b2iseac_rural_land_100km_eqdist.csv  b2iseac_rural_land_10km.csv  b2iseac_rural_land_10km_eqdist.csv  b2iseac_rural_land_1km.csv  b2iseac_rural_land_1km_eqdist.csv  b2iseac_vertical.csv  rburg.csv  rburg_rural_noclutter.csv  rburg_rural_noclutter_los.csv  rburg_rural_noclutter_los_subpath_diffraction.csv  rburg_rural_with_clutter.csv  rburg_urban_with_clutter.csv  rburg_urban_with_clutter_vertical.csv
tests/validation_results/: b2iseac_0_log.csv  b2iseac_1_log.csv  b2iseac_2_log.csv  b2iseac_dense_urban_land_0_log.csv  b2iseac_dense_urban_land_1_log.csv  b2iseac_dense_urban_land_2_log.csv  b2iseac_dense_urban_land_eqdist_0_log.csv  b2iseac_dense_urban_land_eqdist_1_log.csv  b2iseac_dense_urban_land_eqdist_2_log.csv  b2iseac_eqdist_0_log.csv  b2iseac_eqdist_1_log.csv  b2iseac_eqdist_2_log.csv  b2iseac_eqdist_vertical_0_log.csv  b2iseac_eqdist_vertical_1_log.csv  b2iseac_eqdist_vertical_2_log.csv  b2iseac_rural_land_100km_0_log.csv  b2iseac_rural_land_100km_1_log.csv  b2iseac_rural_land_100km_2_log.csv  b2iseac_rural_land_100km_eqdist_0_log.csv  b2iseac_rural_land_100km_eqdist_1_log.csv  b2iseac_rural_land_100km_eqdist_2_log.csv  (+43 more)
